# pookiedocs

./: .gitignore  README.md  mkdocs.yml  pookiedocs.config.py  pyproject.toml
docs/: building.md  cli.md  configuration.md  deployment.md  dev-server.md  getting-started.md  html-pages.md  index.md  markdown-pages.md  navigation.md  project-structure.md  routing.md  search.md  static-assets.md  theme.md
examples/docs/: 01-index.md  02-getting-started.md  03-configuration.md  04-deployment.md  05-changelog.html
examples/docs/06-guides/: 01-writing-content.md  02-custom-html.html
examples/static/: custom.css
pookiedocs/: builder.py  config.py  converter.py  scanner.py  search.py  server.py
pookiedocs/cli/: main.py
pookiedocs/theme/: __init__.py
pookiedocs/theme/assets/: pookiedocs.css  pookiedocs.js
pookiedocs/theme/templates/: page.html
